--- a/.gitignore
+++ b/.gitignore
@@ -79,7 +79,7 @@ coverage/
 
 # Gatsby files
 .cache/
-public
+# Note: public/ directory is needed for our web interface
 
 # Storybook build outputs
 .out
