--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ yarn-error.log*
 .env.production.local
 
 # Build output
-dist/
+# dist/ - needed for Vercel deployment
 build/
 
 # Generated files
